--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1402,8 +1402,10 @@ select:invalid {
     font-size: 18px;
 }
 
-/* All Auth */
-
+.order-history {
+    max-height: 600px;
+    overflow-y: auto;
+}
 
 
 
