--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -87,8 +87,8 @@
                                 <input class="form-check-input ms-2 me-0" type="checkbox" id="id-save-info" name="save-info" checked>
 							{% else %}
 								<label class="form-check-label" for="id-save-info">
-                                    <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or 
-                                    <a class="text-info" href="{% url 'account_login' %}">login</a> to save this information
+                                    <a class="weight-semibold text-blue text-decoration-none text-link-blue" href="{% url 'account_signup' %}">Create an account</a> or 
+                                    <a class="weight-semibold text-blue text-decoration-none text-link-blue" href="{% url 'account_login' %}">login</a> to save this information
                                 </label>
 							{% endif %}
 						</div>
