fix: resolved issue where user profile was updating with checkbox unchecked

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% load bag_tools %}
 
+{% block extra_js %}
+    <script defer src="{% static 'checkout/js/stripe_elements.js' %}"></script>
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid ib-container bg-ib-white text-ib-dark px-md-4 py-4 py-md-5 font-body">
         <div class="row">
@@ -127,7 +131,7 @@
                         <span class="icon">
                             <i class="fas fa-exclamation-circle"></i>
                         </span>
-                        <span>Your card will be charged <strong>${{ grand_total|floatformat:2 }}</strong></span>
+                        <span>Your card will be charged <strong>£{{ grand_total|floatformat:2 }}</strong></span>
                     </p>
 
                 </form>
@@ -147,5 +151,6 @@
     {{ block.super }}
     {{ stripe_public_key|json_script:"id_stripe_public_key" }}
     {{ client_secret|json_script:"id_client_secret" }}
-    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
+    <!-- <script src="{% static 'checkout/js/stripe_elements.js' %}"></script> -->
+    
 {% endblock %}
