fix: add form errors in add_product form

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -122,7 +122,7 @@
 
 {% endblock %}
 
-{% block extra_js %}
+{% block extra_js_end %}
     <script type="text/javascript">
         // Update quantity on click
         $('.update-link').click(function(e) {
