--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -213,7 +213,7 @@
 
 {% endblock %}
 
-{% block extra_js %}
+{% block extra_js_end %}
     <!-- Quantity Input JS -->
     <script src="{% static 'products/js/quantity_input.js' %}"></script>
 {% endblock %}
