--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -148,7 +148,7 @@
 
 {% endblock %}
 
-{% block extra_js %}
+{% block extra_js_end %}
     <!-- Sort Box JS -->
     <script src="{% static '/products/js/sort_box.js' %}"></script>
 {% endblock %}
