--- a/static/css/style.css
+++ b/static/css/style.css
@@ -185,6 +185,10 @@ html {
     line-height: 1;
 }
 
+.ib-lh-2 {
+    line-height: 2;
+}
+
 .section-title {
     font-size: 24px;
 }
@@ -485,6 +489,7 @@ select.ib-form-field {
     width: 100%;
     font-size: 16px;
     box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.50) inset;
+    border-radius: 2px;
     transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -webkit-transition: all .2s ease-in-out;
@@ -1409,7 +1414,20 @@ select:invalid {
 
 /* Add / Edit Product Form */
 
+#product-form label {
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+    margin-top: 1rem;
+}
 
+.checkbox-label label {
+    line-height: 1;
+    margin: 0 !important;
+}
+
+label[for="id_price"] {
+    margin-top: 0.5rem !important;
+}
 
 
 /* Media Queries */
