--- a/static/css/style.css
+++ b/static/css/style.css
@@ -246,6 +246,10 @@ button {
     background: var(--blue);
 }
 
+.ib-button-light-blue  {
+    background: var(--blue-light);
+}
+
 .ib-button-grey {
     background: var(--light-grey);
 }
@@ -1427,6 +1431,34 @@ select:invalid {
 
 label[for="id_price"] {
     margin-top: 0.5rem !important;
+}
+
+/* Product Form */
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.custom-checkbox .custom-control-label::before {
+    border-radius: 0;
+    border-color: #dc3545;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+    background-color: #dc3545;
+    border-color: #dc3545;
+    border-radius: 0;
 }
 
 
