--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -119,7 +119,7 @@
                                             <!-- Product EDIT / DELETE Buttons -->
                                             {% if request.user.is_superuser %}
                                                 <div class="mt-2 gy-3">
-                                                    <a href="" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
+                                                    <a href="{% url 'edit_product' product.id %}" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
                                                     <button type="button" data-toggle="modal" data-target="#modal-{{ review.id }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>                            
                                                 </div>
                                             {% endif %}
