--- a/static/css/style.css
+++ b/static/css/style.css
@@ -530,6 +530,11 @@ select:focus-visible,
     border: var(--blue) 2px solid !important;
 }
 
+.form-check-input-pink:focus,
+.form-check-input-pink:focus-visible {
+    border: var(--warning) 2px solid !important;
+}
+
 input::placeholder,
 textarea::placeholder {
     color: var(--mid-grey)
@@ -583,6 +588,10 @@ legend {
 .form-check-input:checked {
     background-color: var(--blue);
     font-size: 20px;
+}
+
+.form-check-input-pink:checked {
+    background-color: var(--warning);
 }
 
 .form-check-input:focus {
@@ -1450,15 +1459,10 @@ label[for="id_price"] {
     cursor: pointer;
 }
 
-.custom-checkbox .custom-control-label::before {
-    border-radius: 0;
-    border-color: #dc3545;
-}
-
-.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
-    background-color: #dc3545;
-    border-color: #dc3545;
-    border-radius: 0;
+.thumbnail-image {
+    height: 60px;
+    width: auto;
+    border-radius: 5px;
 }
 
 
