--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -110,19 +110,40 @@
                                                 <span class="rating-hex-small rating-hex-{% if product.rating >= 2 %}true{% else %}false{% endif %}">&#x2B22;</span>
                                                 <span class="rating-hex-small rating-hex-{% if product.rating >= 3 %}true{% else %}false{% endif %}">&#x2B22;</span>
                                                 <span class="rating-hex-small rating-hex-{% if product.rating >= 4 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <span class="rating-hex-small me-2 rating-hex-{% if product.rating >= 5 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <p class="d-inline font-body mt-n2 text-nowrap text-ib-dark">{{ product.review_count }} REVIEW{% if product.review_count > 1%}S{% endif %}</p>
+                                                <span class="rating-hex-small me-1 rating-hex-{% if product.rating >= 5 %}true{% else %}false{% endif %}">&#x2B22;</span>
                                             </div>
                                         </div>
 
                                         <div class="row">
                                             <!-- Product EDIT / DELETE Buttons -->
                                             {% if request.user.is_superuser %}
-                                                <div class="mt-2 gy-3">
+                                                <div class="mt-3 gy-3">
                                                     <a href="{% url 'edit_product' product.id %}" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
-                                                    <button type="button" data-toggle="modal" data-target="#modal-{{ review.id }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>                            
+                                                    <a type="button" data-toggle="modal" data-target="#modal-{{ product.id }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>                           
+                                                </div>
+
+                                                <!-- Confirm Delete Modal - Defensive Programming -->
+                                                <div class="modal fade" id="modal-{{ product.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                    <div class="modal-dialog" role="document">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header justify-content-between bg-dark-grey py-3">
+                                                                <h5 class="font-body text-ib-light">DELETE PRODUCT</h5>
+                                                                <button type="button" class="close modal-close-cross text-ib-light" data-dismiss="modal" aria-label="Close">
+                                                                    <span aria-hidden="true" class="ib-lh-1">&times;</span>
+                                                                </button>
+                                                            </div>
+                                                            <div class="modal-body pb-2 font-body">
+                                                                <p>Are you sure you want to delete this product: <strong>"{{ product.name }}"</strong>?</p>
+                                                            </div>
+                                                            <div class="modal-footer pt-0">
+                                                                <button type="button" class="edit-del-btn dismiss-btn font-title text-decoration-none weight-regular align-middle me-2" data-dismiss="modal">CLOSE</button>
+                                                                <a href="{% url 'delete_product' product.id %}?next={{ request.path|urlencode }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             {% endif %}
+
                                         </div>
                                     </div>
 
