--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -97,12 +97,8 @@
         </div>
 {% endblock %}
 
-{% block postloadjs %}
-    {{ block.super }}
-    <script type="text/javascript">
-        $('#new-image').change(function() {
-            var file = $('#new-image')[0].files[0];
-            $('#filename').text(`Image will be set to: ${file.name}`);
-        });
-    </script>
+
+{% block extra_js_end %}
+    <!-- Display Image Filename Message -->
+    <script src="{% static 'products/js/form-image.js' %}"></script>
 {% endblock %}
